--- a/app/theme.css
+++ b/app/theme.css
@@ -1,45 +1,45 @@
 
 :root  {
-  --background: 273.6 0% 95%;
-  --foreground: 273.6 0% 10%;
-  --card: 273.6 0% 90%;
-  --card-foreground: 273.6 0% 15%;
-  --popover: 273.6 0% 95%;
-  --popover-foreground: 273.6 95% 10%;
-  --primary: 273.6 65.6% 32%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 273.6 10% 70%;
+  --background: 208 100% 95%;
+  --foreground: 208 5% 10%;
+  --card: 208 50% 90%;
+  --card-foreground: 208 5% 15%;
+  --popover: 208 100% 95%;
+  --popover-foreground: 208 100% 10%;
+  --primary: 208 91% 60.6%;
+  --primary-foreground: 0 0% 0%;
+  --secondary: 208 30% 70%;
   --secondary-foreground: 0 0% 0%;
-  --muted: 235.60000000000002 10% 85%;
-  --muted-foreground: 273.6 0% 35%;
-  --accent: 235.60000000000002 10% 80%;
-  --accent-foreground: 273.6 0% 15%;
-  --destructive: 0 50% 35%;
-  --destructive-foreground: 273.6 0% 90%;
-  --border: 273.6 20% 50%;
-  --input: 273.6 20% 35%;
-  --ring: 273.6 65.6% 32%;
+  --muted: 170 30% 85%;
+  --muted-foreground: 208 5% 35%;
+  --accent: 170 30% 80%;
+  --accent-foreground: 208 5% 15%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 208 5% 90%;
+  --border: 208 30% 50%;
+  --input: 208 30% 30%;
+  --ring: 208 91% 60.6%;
   --radius: 0.5rem;
 }
 .dark  {
-  --background: 273.6 10% 10%;
-  --foreground: 273.6 0% 90%;
-  --card: 273.6 0% 10%;
-  --card-foreground: 273.6 0% 90%;
-  --popover: 273.6 10% 5%;
-  --popover-foreground: 273.6 0% 90%;
-  --primary: 273.6 65.6% 32%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 273.6 10% 20%;
+  --background: 208 50% 10%;
+  --foreground: 208 5% 90%;
+  --card: 208 50% 10%;
+  --card-foreground: 208 5% 90%;
+  --popover: 208 50% 5%;
+  --popover-foreground: 208 5% 90%;
+  --primary: 208 91% 60.6%;
+  --primary-foreground: 0 0% 0%;
+  --secondary: 208 30% 20%;
   --secondary-foreground: 0 0% 100%;
-  --muted: 235.60000000000002 10% 25%;
-  --muted-foreground: 273.6 0% 60%;
-  --accent: 235.60000000000002 10% 25%;
-  --accent-foreground: 273.6 0% 90%;
-  --destructive: 0 50% 35%;
-  --destructive-foreground: 273.6 0% 90%;
-  --border: 273.6 20% 35%;
-  --input: 273.6 20% 35%;
-  --ring: 273.6 65.6% 32%;
+  --muted: 170 30% 25%;
+  --muted-foreground: 208 5% 60%;
+  --accent: 170 30% 25%;
+  --accent-foreground: 208 5% 90%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 208 5% 90%;
+  --border: 208 30% 30%;
+  --input: 208 30% 30%;
+  --ring: 208 91% 60.6%;
   --radius: 0.5rem;
 }
